[project]
name = "steam-library-mcp"
version = "1.0.0"
description = "MCP server for querying and managing Trent's Steam game library"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "libsql_client>=0.3.0",
    "pydantic>=2.0.0",
    "howlongtobeatpy>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
